Resolved filename too long style bug

--- a/public/stylesheets/in_session.css
+++ b/public/stylesheets/in_session.css
@@ -15,6 +15,7 @@
   margin-top:1px;
   margin-bottom:1px;
   font-size: 70%;
+  overflow:hidden;
 }
 
 #filelist a:link {
